--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
 					<h1><strong>I am Matthew Piper</strong>, a full stack<br />
 					software developer that is hungry<br />
 					to expand my knowledge while writing amazing code.</h1>
