--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I grew up in the Atlanta area and once I graduated high school, I went on to attend college at Georgia Southern University where I majored in Chemistry and minored in German. Due to financial reasons, I left college with a semester left and began work in the hospitality industry. After spending some time in that industry I went to work for Monday Night Brewing. There I was able to use my chemistry knowledge to brew beer. However, after working there for about five years, I felt as if there was nothing else for me to learn and I had pretty much hit my ceiling. After doing some research and discussing with a former co-worker who went through a software development bootcamp, I decided to enroll into App Academy. This is where I discovered my passion for software development. Now I am looking for somewhere to begin my career as a full stack software developer, where I can show off my coding skills and continue to learn more and become the best there ever was.</p>
 						<ul class="actions">
 							<li><a href="/assets/Matthew_Piper_resume.pdf" class="button">Learn More</a></li>
 						</ul>
