--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://funtappd.onrender.com" ><img src="images/thumbs/FunTappedImg.png" alt="" /></a>
+								<a href="https://funtappd.onrender.com" target="_blank" class="image fit thumb"><img src="images/thumbs/FunTappedImg.png" alt="" /></a>
 								<h3>FunTappd</h3>
 								<p>A site that is used to view the beers available at a brewery and their rating.</p>
 							</article>
