more testing again2

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 								<a href="https://funtappd.onrender.com" target="_blank" class="image fit thumb"><img src="images/thumbs/FunTappedImg.png" alt="" /></a>
 								<h3>FunTappd</h3>
 								<p>A site that is used to view the beers available at a brewery and their rating.</p>
+								<a href="https://funtappd.onrender.com" target="_blank"  class="button">Live Site</a></li>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
