--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1104 Brownstone Dr<br />
-										Marietta, GA 30008<br />
+										Marietta, GA<br />
 										United States
 									</li>
 									<li>
